--- a/backend/dashboard/dockerfile
+++ b/backend/dashboard/dockerfile
@@ -1,12 +1,13 @@
-# Use a Maven image to build the app
-FROM maven:3.9.6-eclipse-temurin-17 AS build
-WORKDIR /app
-COPY . .
-RUN mvn clean package -DskipTests
+FROM eclipse-temurin:17-jdk
 
-# Use a lightweight JRE image to run the app
-FROM eclipse-temurin:17-jre
 WORKDIR /app
-COPY --from=build /app/target/dashboard-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+# Copy Maven/Gradle wrapper only
+COPY mvnw* pom.xml ./
+COPY .mvn .mvn
+
+# Download dependencies first (layer caching)
+RUN ./mvnw dependency:go-offline
+
+# Run Spring Boot in dev mode
+CMD ["./mvnw", "spring-boot:run", "-Dspring-boot.run.profiles=dev"]
