--- a/backend/dashboard/src/main/resources/application.properties
+++ b/backend/dashboard/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=dashboard
 spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.devtools.restart.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
