--- a/backend/dashboard/src/main/resources/application.properties
+++ b/backend/dashboard/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=dashboard
-spring.datasource.url=jdbc:postgresql://localhost:5432/dashboard
+spring.datasource.url=jdbc:postgresql://postgres:5432/dashboard
 spring.datasource.username=dashboard
 spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=create
