--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,2 @@
-# Authentik OIDC Configuration
-
-VITE_OIDC_AUTHORITY=http://localhost:9000/application/o/dashboard/
-
-# OAuth2/OIDC Client ID from Authentik
-VITE_OIDC_CLIENT_ID=aJhrYxYnWDx4bpqZWWiyyT3hs2fUl3Y4Df9QeLv2
+VITE_SUPABASE_URL=https://nkqnndwnxkpsxnpgaxcu.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_i1WynGCpptSMtgjPM6kzOQ_JIgmuPVH
